@@ -38,7 +38,7 @@ to read from. Valid MRLs may be plain file names or one of the following
 .br
 .BI vcd://[<CD_image>|<device_name>][@[letter]<number>]
 .br
-.BI vcdo://...
+.BI vcdo://<track_number>
 .br
 .BI cdda:/[<device>][/<track-number>]
 .LP
@@ -109,11 +109,11 @@ work.)
 After the optional device name or file name, you can name the kind of unit,
 preceded by a colon. An MRL which ends in a colon is like not adding it at
 all: the default entry type and number is used. Items come in 4 flavours:
-\fB"Track"\fP, \fB"Entry"\fP, \fB"Playback"\fP and \fB"Segment"\fP. These
+"\fBTrack\fP", "\fBEntry\fP", "\fBPlayback\fP" and "\fBSegment\fP". These
 units are indicated with the capital first letter of each type: \fBT\fP,
 \fBE\fP, \fBP\fP, \fBS\fP, \fBs\fP. An uppercase \fBS\fP in the MRL display
-indicates a NTS segment while a lowercase \fBS\fP indicates a PAL segment.
-However when you enter an MRL, the case of these letters is insignificant.
+indicates a NTSC segment while a lowercase \fBs\fP indicates a PAL segment.
+However, when you enter an MRL, the case of these letters is insignificant.
 
 Depending on the Video CD, you might not have any playable segments
 (\fBS\fP,\fBs\fP) or playback control (\fBP\fP).  If you give a MRL that
